--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Secure Sphere - Protective Vault</string>
+    <string name="title_activity_demo">DemoActivity</string>
 </resources>
